--- a/Restaurant.System/RestaurantSystem.Api/Web.config
+++ b/Restaurant.System/RestaurantSystem.Api/Web.config
@@ -25,8 +25,10 @@
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <remove name="WebDAVModule" />
     </modules>
     <handlers>
+      <remove name="WebDAV" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
